hugr-llvm/src/extension/collections/snapshots/hugr_llvm__extension__collections__static_array__test__static_array_op_codegen@pre-mem2reg@llvm14_2.snap
---
source: hugr-llvm/src/extension/collections/static_array.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define i64 @_hl.main.1({ i64, [0 x i64] }* %0) {
alloca_block:
  %"0" = alloca i64, align 8
  %"2_0" = alloca { i64, [0 x i64] }*, align 8
  %"4_0" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { i64, [0 x i64] }* %0, { i64, [0 x i64] }** %"2_0", align 8
  %"2_01" = load { i64, [0 x i64] }*, { i64, [0 x i64] }** %"2_0", align 8
  %1 = getelementptr inbounds { i64, [0 x i64] }, { i64, [0 x i64] }* %"2_01", i32 0, i32 0
  %2 = load i64, i64* %1, align 4
  store i64 %2, i64* %"4_0", align 4
  %"4_02" = load i64, i64* %"4_0", align 4
  store i64 %"4_02", i64* %"0", align 4
  %"03" = load i64, i64* %"0", align 4
  ret i64 %"03"
}
